Refactor: All controllers align with DTO/REST patterns